@@ -2153,13 +2153,6 @@ static int format_display_and_save (pipeline *decomp,
 {
 	pipeline *sav_p = open_cat_stream (cat_file, encoding);
 	int instat;
-	struct sigaction sa, osa_sigpipe;
-
-	memset (&sa, 0, sizeof sa);
-	sa.sa_handler = SIG_IGN;
-	sigemptyset (&sa.sa_mask);
-	sa.sa_flags = 0;
-	sigaction (SIGPIPE, &sa, &osa_sigpipe);
 
 	if (global_manpath)
 		drop_effective_privs ();
@@ -2183,7 +2176,6 @@ static int format_display_and_save (pipeline *decomp,
 	if (sav_p)
 		close_cat_stream (sav_p, cat_file, instat);
 	pipeline_wait (disp_cmd);
-	sigaction (SIGPIPE, &osa_sigpipe, NULL);
 	return instat;
 }
 #endif /* MAN_CATS */
