@@ -1,3 +1,10 @@
+Fri Jan  7 23:49:55 GMT 2011  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display_and_save): Drop SIGPIPE handling.
+	  pipeline_pump handles this itself, and doing it here means that
+	  SIGPIPE is incorrectly ignored in subprocesses (Debian bug
+	  #597756).
+
 Fri Jan  7 23:25:39 GMT 2011  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (make_roff_command): Use running_setuid.
